# hand-viz

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/: Eye.h  HandsVisualizer.h
src/src/: Eye.cpp  HandsVisualizer.cpp  Viewer.cpp  main.cpp
src/thrifts/: HandVisualizerCommands.thrift
